[workspace]

members = [
    "src/auxil/auxil",
    "src/auxil/range-alloc",
    "src/backend/dx11",
    "src/backend/dx12",
    "src/backend/empty",
    "src/backend/gl",
    "src/backend/metal",
    "src/backend/vulkan",
    "src/backend/webgpu",
    "src/hal",
    "src/warden",
    "examples",
    "examples/quad_android",
]

[patch."https://github.com/gfx-rs/naga"]
#naga = { path = "../naga" }
[patch."https://github.com/timothee-haudebourg/khronos-egl"]
egl = { package = "khronos-egl", path = "../khronos-egl", features = ["dynamic"] }

# [patch.crates-io]
# glow = { path = "../glow" }
