[workspace]

members = [
    "src/auxil/auxil",
    "src/auxil/range-alloc",
    "src/backend/dx11",
    "src/backend/dx12",
    "src/backend/empty",
    "src/backend/gl",
    "src/backend/metal",
    "src/backend/vulkan",
    "src/backend/webgpu",
    "src/hal",
    "src/warden",
    "examples",
    "examples/quad_android",
]

[patch."https://github.com/gfx-rs/naga"]
#naga = { path = "../naga" }

[patch.crates-io]
khronos-egl = { git = "https://github.com/Gordon-F/khronos-egl.git", rev = "8e7e9566b758cba90f892eeffc7e183ce115b40b" }
ndk-glue = { git = "https://github.com/rust-windowing/android-ndk-rs.git", rev = "b430a5e274dea8fd7c45e176d5d19c31b73a20ac", features = ["logger"] }
ndk = { git = "https://github.com/rust-windowing/android-ndk-rs.git", rev = "b430a5e274dea8fd7c45e176d5d19c31b73a20ac" }
ndk-sys = { git = "https://github.com/rust-windowing/android-ndk-rs.git", rev = "b430a5e274dea8fd7c45e176d5d19c31b73a20ac" }
winit = { git = "https://github.com/rust-windowing/winit.git", rev = "86748fbc681ea070bc37e90a569c192555b402cd", features = ["web-sys"]}
