[package]
name = "quad_android"
version = "0.1.0"
publish = false
workspace = "../.."
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["gl"]
gl = ["gfx-backend-gl"]
vulkan = ["gfx-backend-vulkan"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.9"
image = "0.23.12"
log = "0.4"
hal = { path = "../../src/hal", version = "0.6", package = "gfx-hal" }
auxil = { path = "../../src/auxil/auxil", version = "0.5", package = "gfx-auxil" }
gfx-backend-empty = { path = "../../src/backend/empty", version = "0.6" }
winit = "0.23"
ndk-glue = "0.2"

[target.'cfg(target_os = "android")'.dependencies.gfx-backend-vulkan]
path = "../../src/backend/vulkan"
version = "0.6"
optional = true

[target.'cfg(target_os = "android")'.dependencies.gfx-backend-gl]
path = "../../src/backend/gl"
version = "0.6"
optional = true

[package.metadata.android]
package_name = "com.rust.game"
label = "GfxQuad"
# Vulkan supports on devices running Android API level 24 or higher.
target_sdk_version = 24
min_sdk_version = 24
fullscreen = true
build_targets = [ "aarch64-linux-android", "armv7-linux-androideabi", "i686-linux-android" ]
opengles_version = [3, 0]